welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: not found: value x
  x=1
  ^dateFashion:4: error: not found: value x
    x=0
    ^dateFashion:7: error: not found: value x
    x=0
    ^dateFashion:10: error: not found: value x
    x=2
    ^dateFashion:13: error: not found: value x
    x=2
    ^dateFashion:15: error: not found: value x
  x
  ^